# ShellGateway

./: .gitignore  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  README.md  claude_desktop_config.example.json  performance_analysis.py  pyproject.toml  requirements-dev.txt  requirements.txt  simple_test.py  test_performance.py  test_performance_enhanced.py
.github/: copilot-instructions.md
linux_shell_server/: __init__.py  main.py  main.py.backup
mcp-linux-cli-server/: README.md  pyproject.toml  requirements.txt
mcp-linux-cli-server/src/: main.py  server.py
mcp-linux-cli-server/src/handlers/: cli_handler.py
tests/: conftest.py  test_main.py
