[tool.poetry]
name = "mcp-linux-cli-server"
version = "0.1.0"
description = "A server that provides access to a Linux CLI."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
flask-socketio = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"